--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-hook-form": "^7.51.2",
     "shadcn-ui": "^0.8.0",
     "sharp": "^0.33.3",
+    "short-unique-id": "^5.0.3",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
