--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "init": "^0.1.2",
     "lucide-react": "^0.360.0",
     "next": "14.1.4",
+    "next-cloudinary": "^6.5.0",
     "pg": "^8.11.3",
     "react": "^18",
     "react-dom": "^18",
